--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main class="container">
     <div class="card">
       <div class="profile-informations">
-        <img src="./assets/images/avatar.jpg" alt="Foto perfil">
+        <img src="./avatar.jpg" alt="Foto perfil">
         <h2>Norton Rodrigues</h2>
         <p class="location">São Paulo, Brazil</p>
         <p>"Front-end developer"</p>
